--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -17,3 +17,4 @@ jobs:
           SHOW_PROJECTS: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_LINES_OF_CODE: "False"
+          SHOW_LOC_CHART: "False"
